@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.8-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-08 07:50:50, took 00:15:17, with 80 workers, on 3400 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2023-12-08 09:11:08, took 00:17:13, with 80 workers, on 3402 cases, 1 failed, 0 traces, 23 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -70,6 +70,8 @@ http://sources.freertr.org/cfg/conn-dhcp01.tst;conn-dhcp01.tst;success;dhcp
 http://sources.freertr.org/cfg/conn-dhcp02.tst;conn-dhcp02.tst;success;dhcp with arp/nd security
 http://sources.freertr.org/cfg/conn-dhcp03.tst;conn-dhcp03.tst;success;dhcp with static allocation
 http://sources.freertr.org/cfg/conn-dhcp04.tst;conn-dhcp04.tst;success;dhcp with excluded address
+http://sources.freertr.org/cfg/conn-dhcp05.tst;conn-dhcp05.tst;success;dhcp with upgraded server
+http://sources.freertr.org/cfg/conn-dhcp06.tst;conn-dhcp06.tst;#6-run-r2 tping 100 20 1.1.1.1 vrf v1;dhcp with interface server
 http://sources.freertr.org/cfg/conn-dlsw01.tst;conn-dlsw01.tst;success;dlsw over ipv4
 http://sources.freertr.org/cfg/conn-dlsw02.tst;conn-dlsw02.tst;success;dlsw over ipv6
 http://sources.freertr.org/cfg/conn-dlsw03.tst;conn-dlsw03.tst;success;dlsw over loopback
