@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.8-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-08 07:50:50, took 00:15:17, with 80 workers, on 3400 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2023-12-08 09:11:08, took 00:17:13, with 80 workers, on 3402 cases, 1 failed, 0 traces, 23 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -87,6 +87,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp02.tst">conn-dhcp02.tst</a></td><td>success</td><td>dhcp with arp/nd security</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp03.tst">conn-dhcp03.tst</a></td><td>success</td><td>dhcp with static allocation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp04.tst">conn-dhcp04.tst</a></td><td>success</td><td>dhcp with excluded address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp05.tst">conn-dhcp05.tst</a></td><td>success</td><td>dhcp with upgraded server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp06.tst">conn-dhcp06.tst</a></td><td>#6-run-r2 tping 100 20 1.1.1.1 vrf v1</td><td>dhcp with interface server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dlsw01.tst">conn-dlsw01.tst</a></td><td>success</td><td>dlsw over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dlsw02.tst">conn-dlsw02.tst</a></td><td>success</td><td>dlsw over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dlsw03.tst">conn-dlsw03.tst</a></td><td>success</td><td>dlsw over loopback</td></tr>
