@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.8-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-08 08:02:03, took 00:10:55, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2023-12-08 09:21:10, took 00:09:46, with 60 workers, on 528 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
